fix bugs( Top menu Problem with line alignment in the menu (Clients video https://www.screencast.com/t/ZSY7Qrq2). Here my video https://www.screencast.com/t/hZnkxKCgl Adjust the orange circle so that it stays in the right place on the cart. It moves if my window is smaller https://www.screencast.com/t/QaSXIYnhZW
Maine Menu
Regular text spacing (https://www.screencast.com/t/TN8hhwQX5k)
Padding of the gray background should be the same on the left, top and bottom (like this https://www.screencast.com/t/1hmeWLOf7B1)
The arrow must be placed exactly in the center of the gray background (https://www.screencast.com/t/pTm46NFn)
Make the buttons orange with the correct hover for this color (https://www.screencast.com/t/A3XyVbLB4w)

Maine Slider
Keep padding, like at the start and when you change line (https://www.screencast.com/t/YAetpAewOqE)
For second lines, the distance between the line and the text is greater than that of the first line. Make this distance identical (https://www.screencast.com/t/QQepWJ7L1P and https://www.screencast.com/t/qyN50qYhC6R)
)

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -51,6 +51,10 @@
     .header-menu-main .nav-item {
         margin: 0 0.5%;
     }
+
+    .btn-icons {
+        margin-left: 10%;
+    }
 }
 
 @media (max-width: 1400px) {
@@ -100,6 +104,10 @@
     .header-menu-main .nav-item {
         margin: 0 0.5%;
     }
+    .btn-icons {
+        margin-left: 5%;
+    }
+
 }
 
 @media (max-width: 1260px) {
@@ -119,6 +127,11 @@
     div.producteur-de-la-semaine {
         width: 70%;
     }
+
+    .btn-icons {
+        margin-left: 5px;
+    }
+
 }
 
 @media (max-width: 1210px) {
@@ -168,6 +181,10 @@
     div.producteur-de-la-semaine {
         width: 80%;
     }
+
+    .btn-icons {
+        margin-left: 10%;
+    }
 }
 
 @media (max-width: 1040px) {
@@ -196,14 +213,16 @@
     }
 
     /*CATEGORY PAGE*/
-    .category-header-top-caption {
+    .category-header-top-caption span{
         font-size: 37px;
     }
 
     div.producteur-de-la-semaine {
         width: 90%;
     }
-
+    .category-header-top-img{
+        height: 200px;
+    }
 }
 
 @media (max-width: 992px) {
@@ -220,14 +239,6 @@
         width: 90%;
     }
 
-    .btn-icons {
-        width: inherit;
-        height: auto;
-    }
-
-    .btn-icons-cart i {
-        margin-top: 0px;
-    }
 
     .nav-wrapper .nav li a {
         line-height: 37px;
@@ -262,10 +273,8 @@
     .parcourir-par-catégories .slick-prev, .parcourir-par-catégories .slick-next {
         top: 35% !important;
     }
-
-    .nav-wrapper .btn-icons-cart {
-        width: 75px;
-        height: 30px;
+    .nav-wrapper .btn-icons{
+        margin-left: 5px!important;
     }
 }
 
@@ -379,6 +388,10 @@
     .nos-clients-nous-disent-right-wrapper {
         padding: 5rem;
     }
+
+    .category-header-top-caption span{
+        font-size: 28px;
+    }
 }
 
 @media (max-width: 680px) {
@@ -429,8 +442,9 @@
         height: 45px;
     }
 
-    .btn-icons-cart i {
-        font-size: 24px;
+    .nav-wrapper .btn-icons{
+        height: 35px;
+        width: 35px;
     }
 
     .nav-link {
@@ -497,7 +511,7 @@
     }
 
     /*CATEGORY PAGE*/
-    .category-header-top-caption {
+    .category-header-top-caption span{
         font-size: 24px;
     }
 
@@ -549,9 +563,6 @@
         margin: 0 !important;
     }
 
-    .btn-icons-cart i {
-        font-size: 18px;
-    }
 
     .header-slider-caption-description {
         font-size: 13px;
