--- a/css/styles.css
+++ b/css/styles.css
@@ -380,12 +380,14 @@ a.nav-link {
     border: none;
     background-color: transparent;
     color: #666666;
-    width: 40%;
-    height: 60%;
+    position: relative;
+    width: 40px;
+    height: 40px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
-    margin-top: 10px;
+    margin-left: 20%;
+    float: left;
 }
 
 .btn-icons-list {
@@ -414,8 +416,8 @@ a.nav-link {
 .btn-icons-cart-count {
     position: absolute;
     font-size: 9px;
-    right: 25%;
-    top: 1%;
+    right: 0;
+    top: 0;
     border-radius: 10px;
     width: 15px;
     height: 15px;
@@ -496,7 +498,7 @@ a.nav-link {
 
 .sous-menu-main li {
     font-family: NunitoSans-Bold, serif;
-    padding: 5px 0;
+    padding: 4px;
     width: 95%;
 }
 
@@ -521,7 +523,7 @@ a.nav-link {
 }
 
 .sous-menu-main-item-title {
-    padding-left: 1% !important;
+    padding-left: 3px !important;
 }
 
 .sous-menu-main li i {
@@ -529,7 +531,7 @@ a.nav-link {
     position: relative;
     float: right;
     right: 6%;
-    top: 2px;
+    top: 4px;
     transition: opacity .3s;
     -webkit-transition: opacity .3s;
     -o-transition: opacity .3s;
@@ -635,7 +637,6 @@ a.nav-link {
     position: absolute;
     display: block;
     margin: 0 12px;
-    letter-spacing: 1px;
     transition: color 0.1s, background-color 0.1s, padding 0.2s ease-in;
     -webkit-transition: color 0.1s, background-color 0.1s, padding 0.2s ease-in;
     -o-transition: color 0.1s, background-color 0.1s, padding 0.2s ease-in;
@@ -752,6 +753,9 @@ a.nav-link {
 .photo-section-caption-description {
     font-size: 24px;
     font-family: NunitoSans-Bold, serif;
+}
+.photo-section-caption-description span{
+    padding-bottom: 2px;
 }
 
 .photo-section-caption-img {
@@ -2497,4 +2501,11 @@ a.category-header-description-more:hover {
 #example-one li.nav-item:hover  a.nav-link::before, #example-one li.nav-item:focus  a.nav-link::before {
     transform-origin: left top;
     transform: scale(1, 1);
+}
+
+#menu-line {
+    position: absolute;
+    bottom: 0px;
+    background: white;
+    height: 2px
 }
